adding sharing feature